[package]
name = "command-parser"
version = "0.1.0"
authors = ["Kaneyuki Hiromasa <matsugen2511@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom= "5.1.1"
failure= "0.1.7"
bitflags= "1.2.1"
serde= "1.0.104"
ron= "0.5.1"
log="0.4.8"